<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Novo Usuario</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="sair">Sair</string>
    <string name="atualizar">Atualizar</string>

</resources>
